# paw_control

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  hacs.json  info.md  install_check.sh  pyproject.toml  release.yml  requirements.txt  requirements_dev.txt  setup.cfg  validate_installation.py
custom_components/pawcontrol/: README.md  __init__.py  _init_.py  actionable_push.py  activity_logger.py  automation_generator.py  automation_system.py  binary_sensor.py  button.py  config_flow.py  config_helpers.py  const.py  coordinator.py  dashboard.py  datetime.py  device_tracker.py  diagnostics.py  exceptions.py  gps.py  gps_coordinator.py  gps_handler.py  gps_system.py  health.py  health_system.py  helpers.py  installation_manager.py  manifest.json  module_manager.py  module_registry.py  notification_handler.py  number.py  push.py  readme.md  script_system.py  select.py  sensor.py  service_handlers.py  services.yaml  setup_helpers.py  setup_verifier.py  (+6 more)
custom_components/pawcontrol/blueprints/: Beispielkarten.yaml
custom_components/pawcontrol/entities/: __init__.py  base.py  binary_sensor.py  button.py  datetime.py  device_tracker.py  gps.py  health.py  number.py  select.py  sensor.py  switch.py  text.py
custom_components/pawcontrol/helpers/: __init__.py  entity.py  gps.py  json.py  sensor.py
custom_components/pawcontrol/translations/: translations.json  translations_de.json
tests/: __init__.py  test_config_flow_defaults.py  test_dashboard.py  test_domain_data.py  test_entity_base_classes.py  test_entity_helpers.py  test_feeding_status.py  test_happiness_sensor.py  test_health_entity.py  test_helpers_import.py  test_init.py  test_init_services.py  test_installation_manager.py  test_module_registry.py  test_push.py  test_reload_entry.py  test_setup_helpers.py  test_utils.py
